# collatz

./: .gitignore  CMakeLists.txt  collatz.cpp
